Bug 179535 - Typo: Grammar errors in Kontact
Summary: Typo: Grammar errors in Kontact
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-03 20:18 UTC by Ian Higginson
Modified: 2009-01-19 14:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Higginson 2009-01-03 20:18:03 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

I thought I would group these grammar errors into one bug report as they are all the same type of error. I would create a patch for these myself but I'm still not 100% certain on the actual process for creating the patches to upload onto the KDE Bug Tracking System.

1) On the introduction screen for Kontact, where it says that Kontact handles your email and calendar and so on, it should read 'address book' and not 'addressbook' as it currently shows.

2) When you go to add an address book ("Kontact > Contacts" or in KAddressBook itself) it has a 2 entries that show 'addressbook' instead of 'address book' as it should show. These are:

* Addressbook on IMAP Server via KMail
* Addressbook on Scalix Server via KMail
Comment 1 Allen Winter 2009-01-04 21:54:33 UTC
the translators agree on "address book".  unfortunately, we are in a string freeze so we need to wait a few days before I can fix this.
Comment 2 Christophe Marin 2009-01-19 14:05:30 UTC
SVN commit 913448 by cgiboudeaux:

Grammar fix: addressbook -> address book

BUG: 179535



 M  +1 -1      akonadi/resources/kabc/kabcresource.desktop  
 M  +1 -1      kaddressbook/csv-templates/yahoo.desktop  
 M  +1 -1      kaddressbook/xxport/gmx_xxport.desktop  
 M  +1 -1      kaddressbook/xxport/gnokii_xxport.desktop  
 M  +1 -1      kaddressbook/xxport/pab_xxport.desktop  
 M  +1 -1      kmobiletools/kmobiletools/mainpart/services/addressbook/addressbook_service.desktop  
 M  +1 -1      kontact/src/mainwindow.cpp  
 M  +1 -1      kpilot/conduits/contacts/kpilot-conduit-contacts.desktop  
 M  +1 -1      kresources/kolab/kabc/kolab.desktop  
 M  +1 -1      kresources/scalix/kabc/scalix.desktop  


WebSVN link: http://websvn.kde.org/?view=rev&revision=913448