Grammar fix: addressbook -> address book

BUG: 179535


svn path=/trunk/KDE/kdepim/; revision=913448